# amsc-multigrid

./: .gitignore  1-1.sh  1-2.sh  2-1.sh  2-2.sh  2-3.sh  3-1.sh  3-2.sh  CMakeLists.txt  README.md  build.sh  build_mpi.sh  build_omp.sh  converge_multigrid.cpp  converge_solver.cpp  gauss.cpp  gauss_mpi.cpp  gauss_omp.cpp  jacobi.cpp  jacobi_mpi.cpp  jacobi_omp.cpp  main.cpp  multigrid.cpp  multigrid.hpp  multigrid_mpi.cpp  multigrid_omp.cpp  plot.py  solver_main.cpp  solvers.hpp  sor.cpp  sor_mpi.cpp  sor_omp.cpp
docs/: Multigrid_Description.odt
